; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/ddbridge/extr_ddbridge-sx8.c_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/ddbridge/extr_ddbridge-sx8.c_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.sx8* }
%struct.sx8 = type { i64, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.sx8* }
%struct.mci_base = type { i64, i32, %struct.TYPE_2__ }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dvb_frontend*)* @release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release(%struct.dvb_frontend* %0) #0 {
  %2 = alloca %struct.dvb_frontend*, align 8
  %3 = alloca %struct.sx8*, align 8
  %4 = alloca %struct.mci_base*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %2, align 8
  %5 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %6 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %5, i32 0, i32 0
  %7 = load %struct.sx8*, %struct.sx8** %6, align 8
  store %struct.sx8* %7, %struct.sx8** %3, align 8
  %8 = load %struct.sx8*, %struct.sx8** %3, align 8
  %9 = getelementptr inbounds %struct.sx8, %struct.sx8* %8, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.sx8*, %struct.sx8** %10, align 8
  %12 = bitcast %struct.sx8* %11 to %struct.mci_base*
  store %struct.mci_base* %12, %struct.mci_base** %4, align 8
  %13 = load %struct.mci_base*, %struct.mci_base** %4, align 8
  %14 = getelementptr inbounds %struct.mci_base, %struct.mci_base* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, -1
  store i64 %16, i64* %14, align 8
  %17 = load %struct.mci_base*, %struct.mci_base** %4, align 8
  %18 = getelementptr inbounds %struct.mci_base, %struct.mci_base* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %1
  %22 = load %struct.mci_base*, %struct.mci_base** %4, align 8
  %23 = getelementptr inbounds %struct.mci_base, %struct.mci_base* %22, i32 0, i32 1
  %24 = call i32 @list_del(i32* %23)
  %25 = load %struct.mci_base*, %struct.mci_base** %4, align 8
  %26 = bitcast %struct.mci_base* %25 to %struct.sx8*
  %27 = call i32 @kfree(%struct.sx8* %26)
  br label %28

28:                                               ; preds = %21, %1
  %29 = load %struct.sx8*, %struct.sx8** %3, align 8
  %30 = call i32 @kfree(%struct.sx8* %29)
  ret void
}

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @kfree(%struct.sx8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
